--- a/admin/styles.css
+++ b/admin/styles.css
@@ -10,3 +10,19 @@
     margin-bottom: 4px;
     width: 100%;
 }
+
+.user-container{
+    width: 220px;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    box-shadow: 6px 6px 2px 1px rgba(0, 0, 255, .2);
+    padding: 6px 8px;
+}
+
+.user-content{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
