--- a/admin/styles.css
+++ b/admin/styles.css
@@ -1,3 +1,9 @@
+.admin-page-container{
+    display: flex;
+    gap: 16px;
+}
+
+
 .admin-sign-in-container{
     margin-top: 100px;
     width: 220px;
@@ -17,6 +23,7 @@
     border-radius: 4px;
     box-shadow: 6px 6px 2px 1px rgba(0, 0, 255, .2);
     padding: 6px 8px;
+    margin-bottom: 12px;
 }
 
 .user-content{
@@ -24,5 +31,29 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
 }
+
+.post-container{  
+    width: 220px;
+    height: 110px;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    box-shadow: 6px 6px 2px 1px rgba(0, 0, 255, .2);   
+    margin-bottom: 12px;
+}
+
+.post-content{
+    padding: 6px 8px;
+    width: 100%;
+}
+
+.post-header{
+    box-sizing: border-box;
+    padding: 6px 8px;
+    background: #eee;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
