--- a/admin/styles.css
+++ b/admin/styles.css
@@ -35,7 +35,7 @@
 
 .post-container{  
     width: 220px;
-    height: 110px;
+    min-height: 110px;
     border: 1px solid #aaa;
     border-radius: 4px;
     box-shadow: 6px 6px 2px 1px rgba(0, 0, 255, .2);   
@@ -55,5 +55,29 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.comment-container{  
+    width: 220px;
+    min-height: 110px;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    box-shadow: 6px 6px 2px 1px rgba(0, 0, 255, .2);   
+    margin-bottom: 12px;
+}
+
+.comment-header{
+    box-sizing: border-box;
+    padding: 6px 8px;
+    background: #eee;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.comment-content{
+    padding: 6px 8px;
+    width: 100%;
 }
 
