--- a/admin/styles.css
+++ b/admin/styles.css
@@ -1,3 +1,15 @@
+.admin-header{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 16px;
+    padding-right: 16px;
+}
+
+.admin-header input{
+    width: 120px;
+    height: 40px;
+}
+
 .admin-page-container{
     display: flex;
     gap: 16px;
