--- a/admin/styles.css
+++ b/admin/styles.css
@@ -1,3 +1,7 @@
+input[type=button]{
+    cursor: pointer;
+}
+
 .admin-header{
     display: flex;
     justify-content: space-between;
@@ -36,6 +40,7 @@
     box-shadow: 6px 6px 2px 1px rgba(0, 0, 255, .2);
     padding: 6px 8px;
     margin-bottom: 12px;
+    cursor: pointer;
 }
 
 .user-content{
@@ -44,6 +49,8 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+
 
 .post-container{  
     width: 220px;
@@ -91,5 +98,10 @@
 .comment-content{
     padding: 6px 8px;
     width: 100%;
+}
+
+.active {
+    padding-top: 6px;
+    box-shadow: 0px 0px 2px 1px rgba(0, 0, 255, .2);   
 }
 
