--- a/admin/styles.css
+++ b/admin/styles.css
@@ -19,7 +19,6 @@ input[type=button]{
     gap: 16px;
 }
 
-
 .admin-sign-in-container{
     margin-top: 100px;
     width: 220px;
@@ -103,5 +102,6 @@ input[type=button]{
 .active {
     padding-top: 6px;
     box-shadow: 0px 0px 2px 1px rgba(0, 0, 255, .2);   
+    border-width: 2px;
 }
 
